--- a/proposal doc/references.bib
+++ b/proposal doc/references.bib
@@ -4,61 +4,166 @@
 % - Try to avoid unreliable URLs that might disappear, such as private websites or third-party platforms (Researchgate, academia.edu, ...).
 % - You can also find the .bib file of inspiration.pdf on Nestor.
 % - Do not blindly copy BibTeX files from Google Scholar or publisher websites, but clean them up manually!
-% - Ensure you use the correct entry type, not everything is an @article.
 
-% example of a book
-@book{WooldridgeMAS,
-  title = {An introduction to MultiAgent Systems},
-  author = {Michael Wooldridge},
-  publisher = {John Wiley \& Sons},
-  year = 2009,
-  isbn = {978-0470519462},
-  url = {https://www.cs.ox.ac.uk/people/michael.wooldridge/pubs/imas/IMAS2e.html},
+@article{MARL-safe-efficient-planning-connected-vehicles,
+  author    = {S. Han and S. Zhou and J. Wang and L. Pepin and C. Ding and J. Fu and F. Miao},
+  title     = {A Multi-Agent Reinforcement Learning Approach for Safe and Efficient Behavior Planning of Connected Autonomous Vehicles},
+  journal   = {IEEE Transactions on Intelligent Transportation Systems},
+  volume    = {25},
+  number    = {5},
+  pages     = {3654--3665},
+  year      = {2024},
+  month     = {May},
+  doi       = {10.1109/TITS.2023.3336670}
 }
 
-% example of an article in a journal
-@article{dWVV2013:ToM,
-  title = {How much does it help to know what she knows you know? An agent-based simulation study},
-  author = {Harmen de Weerd and Rineke Verbrugge and Bart Verheij},
-  year = 2013,
-  volume = {199-200},
-  pages = {67--92},
-  journal = {Artificial Intelligence},
-  doi = {10.1016/j.artint.2013.05.004},
+@article{stigmergy-robot-swarms,
+  author    = {Muhammad Salman and David Garzón Ramos and Mauro Birattari},
+  title     = {Automatic Design of Stigmergy-Based Behaviours for Robot Swarms},
+  journal   = {Communications Engineering},
+  volume    = {3},
+  pages     = {30},
+  year      = {2024},
+  doi       = {10.1038/s44172-024-00175-7}
 }
 
-% example of an article in conference proceedings
-@inproceedings{vDGKK2019:ReachGossip,
-  title = {Reachability of Five Gossip Protocols},
-  author = {Hans van Ditmarsch and Malvin Gattinger and Ioannis Kokkinis and Louwe B. Kuijer},
-  booktitle = {Proceedings of RP 2019},
-  editor = {Emmanuel Filiot and Raphaël Jungers and Igor Potapov},
-  year = 2019,
-  doi = {10.1007/978-3-030-30806-3_17},
+@article{bio-collision-avoidance-swarm-deepRL,
+  author    = {Seongin Na and Hanlin Niu and Barry Lennox and Farshad Arvin},
+  title     = {Bio-Inspired Collision Avoidance in Swarm Systems via Deep Reinforcement Learning},
+  journal   = {IEEE Transactions on Vehicular Technology},
+  volume    = {71},
+  number    = {3},
+  pages     = {2511--2525},
+  year      = {2022},
+  month     = {March},
+  doi       = {10.1109/TVT.2022.3145346}
 }
 
-% example of a master thesis
-@misc{vdBerg2019:UnreliableGossip,
-  title = {Unreliable Gossip},
-  author = {Line van den Berg},
-  note = {Master thesis},
-  institution = {University of Amsterdam},
-  year = 2018,
-  url = {https://eprints.illc.uva.nl/1597/},
+@article{deepRL-joint-trajectory-communication-IoT,
+  author    = {Ruyu Luo and Hui Tian and Wanli Ni and Julian Cheng and Kwang-Cheng Chen},
+  title     = {Deep Reinforcement Learning Enables Joint Trajectory and Communication in Internet of Robotic Things},
+  journal   = {IEEE Transactions on Wireless Communications},
+  volume    = {23},
+  number    = {12},
+  pages     = {18154--18165},
+  year      = {2024},
+  month     = {December},
+  doi       = {10.1109/TWC.2024.3462450}
 }
 
-% example of a previous report (no DOI or URL needed, reports are not public)
-@techreport{HvKLL2019:SupermarketQ,
-  title = {Supermarket queuing},
-  author = {Marco Breemhaar and Ingeborg van Keulen and Menno Liefstingh and Maaike Los},
-  note = {Project report for Design of Multi-Agent Systems},
-  date = 2019,
+@inproceedings{D-MARL,
+  author    = {Gabriele Calzolari and Vidya Sumathy and Christoforos Kanellakis and George Nikolakopoulos},
+  title     = {D-MARL: A Dynamic Communication-Based Action Space Enhancement for Multi Agent Reinforcement Learning Exploration of Large Scale Unknown Environments},
+  booktitle = {2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year      = {2024},
+  pages     = {3470--3475},
+  address   = {Abu Dhabi, UAE},
+  month     = {October},
+  doi       = {10.1109/IROS58592.2024.10801319}
 }
 
-% example how to cite wikipedia. Always provide a full date and a URL including the "oldid".
-@misc{wiki:SchellingSegregation,
-  author = {Wikipedia},
-  date = {2020-09-05},
-  title = {Schelling's model of segregation},
-  url = {https://en.wikipedia.org/w/index.php?title=Schelling%27s_model_of_segregation&oldid=976837642},
+@article{MARL-coop-lane-changing,
+  author    = {Wei Zhou and Dong Chen and Jun Yan and Zhaojian Li and Huilin Yin and Wanchen Ge},
+  title     = {Multi-Agent Reinforcement Learning for Cooperative Lane Changing of Connected and Autonomous Vehicles in Mixed Traffic},
+  journal   = {Autonomous Intelligent Systems},
+  volume    = {2},
+  pages     = {5},
+  year      = {2022},
+  doi       = {10.1007/s43684-022-00023-5}
+}
+
+@article{MARL-coord-commun-control,
+  author    = {Federico Mason and Federico Chiariotti and Andrea Zanella and Petar Popovski},
+  title     = {Multi-Agent Reinforcement Learning for Coordinating Communication and Control},
+  journal   = {IEEE Transactions on Cognitive Communications and Networking},
+  volume    = {10},
+  number    = {4},
+  pages     = {1566--1578},
+  year      = {2024},
+  month     = {August},
+  doi       = {10.1109/TCCN.2024.3384492}
+}
+
+@inproceedings{off-beat-MARL,
+  author    = {Wei Qiu and Weixun Wang and Rundong Wang and Bo An and Yujing Hu and Svetlana Obraztsova and Zinovi Rabinovich and Jianye Hao and Yingfeng Chen and Changjie Fan},
+  title     = {Off-Beat Multi-Agent Reinforcement Learning},
+  booktitle = {Proc. of the 22nd International Conference on Autonomous Agents and Multiagent Systems (AAMAS 2023)},
+  pages     = {2424--2426},
+  year      = {2023},
+  address   = {London, United Kingdom},
+  month     = {May 29--June 2},
+  organization = {IFAAMAS}
+}
+
+@inproceedings{pheromone-independent-MARL-nav,
+  author    = {Kaige Zhang and Yaqing Hou and Hua Yu and Wenxuan Zhu and Liang Feng and Qiang Zhang},
+  title     = {Pheromone-Based Independent Reinforcement Learning for Multiagent Navigation},
+  booktitle = {NCAA 2021: Neural Computing and Applications Conference},
+  series    = {Communications in Computer and Information Science},
+  volume    = {1449},
+  pages     = {44--58},
+  year      = {2021},
+  publisher = {Springer},
+  doi       = {10.1007/978-981-16-5188-5_4}
+}
+
+@inproceedings{simul-attack-agents,
+  author    = {Ridhima Bector and Hang Xu and Abhay Aradhya and Chai Quek and Zinovi Rabinovich},
+  title     = {Poisoning the Well: Can We Simultaneously Attack a Group of Learning Agents?},
+  booktitle = {Proceedings of the Thirty-Second International Joint Conference on Artificial Intelligence (IJCAI-23)},
+  pages     = {3470--3478},
+  year      = {2023}
+}
+
+@article{swarm-RL-overview,
+  author    = {Marc-André Blais and Moulay A. Akhloufi},
+  title     = {Reinforcement Learning for Swarm Robotics: An Overview of Applications, Algorithms, and Simulators},
+  journal   = {Cognitive Robotics},
+  volume    = {3},
+  pages     = {226--256},
+  year      = {2023},
+  doi       = {10.1016/j.cogr.2023.07.004}
+}
+
+@inproceedings{scaling-MARL-adaptive-sparese-commun-graph,
+  author    = {Chuangchuang Sun and Macheng Shen and Jonathan P. How},
+  title     = {Scaling Up Multiagent Reinforcement Learning for Robotic Systems: Learn an Adaptive Sparse Communication Graph},
+  booktitle = {2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year      = {2020},
+  pages     = {11755--11762},
+  address   = {Las Vegas, NV, USA},
+  month     = {October},
+  doi       = {10.1109/IROS45743.2020.9341303}
+}
+
+@inproceedings{spiking-poisoning-unknown-attack-RL,
+  author    = {Hang Xu and Xinghua Qu and Zinovi Rabinovich},
+  title     = {Spiking Pitch Black: Poisoning an Unknown Environment to Attack Unknown Reinforcement Learners},
+  booktitle = {Proceedings of the 21st International Conference on Autonomous Agents and Multiagent Systems (AAMAS 2022)},
+  year      = {2022},
+  address   = {Online},
+  pages     = {1409--1417},
+  organization = {IFAAMAS}
+}
+
+@article{stigmergic-independent-MARL-collab,
+  author    = {Xing Xu and Rongpeng Li and Zhifeng Zhao and Honggang Zhang},
+  title     = {Stigmergic Independent Reinforcement Learning for Multiagent Collaboration},
+  journal   = {IEEE Transactions on Neural Networks and Learning Systems},
+  volume    = {33},
+  number    = {9},
+  pages     = {4285--4298},
+  year      = {2022},
+  month     = {September},
+  doi       = {10.1109/TNNLS.2021.3056418}
+}
+
+@inproceedings{transferable-environment-poisoning-RL,
+  author    = {Hang Xu and Rundong Wang and Lev Raizman and Zinovi Rabinovich},
+  title     = {Transferable Environment Poisoning: Training-time Attack on Reinforcement Learning},
+  booktitle = {Proc. of the 20th International Conference on Autonomous Agents and Multiagent Systems (AAMAS 2021)},
+  year      = {2021},
+  pages     = {1398--1406},
+  address   = {Online},
+  organization = {IFAAMAS}
 }
