Completed Proposal Paperwork

--- a/proposal doc/references.bib
+++ b/proposal doc/references.bib
@@ -167,3 +167,27 @@
   address   = {Online},
   organization = {IFAAMAS}
 }
+
+@inproceedings{NeurIPS2021,
+  author    = {Jungsoo Kim and Kyunghyun Cho and David Sontag},
+  title     = {Communication-Efficient Multi-Agent Reinforcement Learning via Signaling},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS 2021)},
+  year      = {2021},
+  url       = {https://proceedings.neurips.cc/paper/2021/hash/486c0401c56bf7ec2daa9eba58907da9-Abstract.html}
+}
+
+@inproceedings{lowe2020multiagent,
+  author    = {Ryan Lowe and Jakub Sygnowski and Alexander I. Cowen-Rivers and Wendelin Böhmer and Jost Tobias Springenberg and Nicolas Heess and Yuhuai Wu},
+  title     = {Multi-Agent Policy Optimization with Distributional Reinforcement Learning},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS 2020)},
+  year      = {2020},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2020/hash/8b5c8441a8ff8e151b191c53c1842a38-Abstract.html}
+}
+
+@inproceedings{das2019tarmac,
+  title     = {Tarmac: Targeted Multi-Agent Communication},
+  author    = {Abhijit Das and Sarthak Mittal and Gaurav Sukhatme},
+  booktitle = {Proceedings of the 36th International Conference on Machine Learning (ICML 2019)},
+  year      = {2019},
+  url       = {https://proceedings.mlr.press/v97/das19a.html}
+}
