--- a/proposal doc/report.tex
+++ b/proposal doc/report.tex
@@ -1,151 +1,221 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage{dmasproject}
+\usepackage{pgfgantt} % For the Gantt chart
+\usepackage{geometry} % For page layout
 % if you need additional LaTeX packages, add them here
 
-\title{Your Project Title Goes Here}
+\title{Asymmetric Communication Policies in Multi-Agent Reinforcement Learning for Tethered Robots}
 % sort your names alphabetically by last name
 \author{
-  First Author (s123456)
+  Kelvin Mock (Student ID: 101363677)
   \\
-  Second Author (s234567)
+  Kimia Ramezani (Student ID: 101050878)
   \\
-  Third Author (s345678)
+  Chintan Shah (Student ID: )
   \\
   Fourth Author (s456789)
+  \\
+  Supervised by: Dr. Zinovi Rabinovich (Email: \url{Zinovi.Rabinovich@carleton.ca})
 }
-\date{Alpha version, September 2020} % change this accordingly
+\date{February 2025}
 
 \begin{document}
 
 \maketitle
 
 \begin{abstract}
-The abstract should briefly summarize your project in 150--250 words.
+Supervised by Dr. Zinovi Rabinovich, this is a project under the course COMP5801 Multi Agent Aspects of Deep Reinforcement Learning (RL), at Carleton University. This group intends to implement a RL-based algorithm for autonomous vehicles.
 \end{abstract}
 
-\section{Introduction}
+\section{Project Description}
 
-You can also refer to more general literature here, for example~\cite{WooldridgeMAS} or~\cite{wiki:SchellingSegregation}.
+\subsection{Environment Description}
 
-\subsection{Problem}
+This project involves a 2D grid-based environment filled with obstacles, where two robots, R1 (Leader) and R2 (Follower), must navigate from Point A to Point B while staying within a fixed tethered distance. Since the environment is only partially observable, each robot can only see a limited area around itself.
 
-Key question 1: What is the problem addressed?
+\subsection{Agent Interaction}
 
-\subsection{State of the art}
+\paragraph{R1 (Leader)} Has access to a full map and a pre-planned navigation path but does not receive any feedback from R2. This agent can only send simple directional commands (go, stop, left, right) to R2.
 
-Key question 2: What is the state of the art concerning this problem?
-Which publications are the inspiration for your project?
-Add them to the file \texttt{references.bib} and cite them like this~\cite{dWVV2013:ToM}.
+\paragraph{R2 (Follower)} Has local sensing capabilities (ray-based detection, grid-based occupancy awareness) but cannot see the entire map. It depends entirely on R1’s instructions and its own local observations to decide its movement.
 
-Note that the \verb|\cite| command can take multiple references~\cite{vDGKK2019:ReachGossip,vdBerg2019:UnreliableGossip,HvKLL2019:SupermarketQ}.
+\subsection{Action Space}
 
-\subsection{New idea}
+Both robots have discrete movement options: \{Up, Down, Left, Right, Stay\}. \\
+R1’s movements are based on its independent decision-making and R2’s movements are influenced by both its own perception and the signals received from R1.
 
-Key question 3: What is the new idea for addressing the problem?
+\subsection{Tether Constraint} The robots must remain within a predefined maximum distance. If they exceed this limit, they incur a penalty.
 
-\section{Method}
+\section{Objectives \& Challenges}
 
-\subsection{Simulation model}
+\subsection{Agent's Goal}
 
-Here you should describe your model.
-How similar to the one used in your state of the art reference is it?
-Which things did you change, and why?
+The main goal of a robot is to reach the goal position (B) from an arbitrary starting position (A) successfully.
 
-\begin{figure}[h]
-  \centering
-  \begin{tikzpicture}[node distance=2cm,>=latex]
-    \node (0) [circle,draw] {0};
-    \node (1) [circle,draw,right of=0] {1};
-    \draw [->,dashed] (0) -- (1);
-  \end{tikzpicture}
-  \caption{A figure should always have a caption.}\label{fig1:twoDots}
-\end{figure}
+\subsection{Agent's Constraints} 
+Robots should avoid obstacles and maintain the tether constraint. Moreover, it is important to minimize the number of steps to improve efficiency.
 
-If you add figures, such as \autoref{fig1:twoDots}, always refer to them at least once.
-Please use tikz or vector formats like EPS or PDF.
-Avoid pixel formats such as PNG or JPG (because they would become pixelated or blurry).
+\subsection{Key Challenges} \paragraph{Asymmetric communication} R2 cannot send feedback, making it difficult for R1 to adjust its strategy dynamically.
 
-\subsection{Implementation details}
+\paragraph{Different levels of perception} R1 has a global view, while R2 can only see its immediate surroundings. 
 
-Here you should describe the implementation of your simulation.
-Please explicitly mention any programming languages, tools or libraries you used.
+\paragraph{} Hence, coordinating movement effectively within these constraints will make an agent achieving its goal challenging. 
 
-\subsection{Experiment design}
 
-Did you run multiple different versions of your simulation with different parameters?
-Then explain the different setups here and why you chose them.
+\section{Why This Problem Matters?}
 
-You can also mention here what results you are expecting.
+This project could potentially be extended to several real-world applications. 
 
-\section{Results}
+\subsection{Real-World Applications}
 
-\subsection{Experiment findings}
+\paragraph{Warehouse \& Supply Chain Robotics \cite{swarm-RL-overview}} Refers to Leader-follower robot systems where a primary unit sends commands, and secondary units must interpret and execute them autonomously.
 
-Key question 4: What are the results you obtained?
+\paragraph{Military \& Search-and-Rescue Operations} Potentially extends to the idea of drones guiding ground robots in disaster zones where the communication is unreliable \cite{D-MARL}.
 
-It can be good to use a Table, like \autoref{tab1:results}.
-Please ensure that numeric results are right-aligned and have the same number of digits, to allow for easy comparison.
+\paragraph{Autonomous Convoys \cite{MARL-coord-commun-control}} Implies groups of vehicles following a leader, where only the lead vehicle has access to GPS or the satellite data. Those groups of vehicles could employ possibly a multitude of algorithms, namely the sparse communication graph model \cite{scaling-MARL-adaptive-sparese-commun-graph}, which scales up a multi-agent reinforcement learning based robotic system by reducing the communication overhead and at the same time ensuring coordinated convoy movements. Apart from that, those vehicles are likely employed effective collision avoidance mechanisms for safety \cite{bio-collision-avoidance-swarm-deepRL}.
 
-\begin{table}[h]
-  \centering
-  \begin{tabular}{lrr}
-    \toprule
-    Setup & run time & success rate \\
-    \midrule
-    1  & 0.123 & 12\% \\
-    2  & 0.456 & 34\% \\
-    3a & 0.789 & 56\% \\
-    3b & 1.234 & 78\% \\
-    \bottomrule
-  \end{tabular}
-  \caption{Tables should always have a caption.}\label{tab1:results}
-\end{table}
+\section{Research Significance} 
 
-You might also want to include plots or graphs.
-Similar to figures, please do not use screenshots or pixel-based formats, but vector-based formats.
-Alternatively, generate your plots with the \texttt{pgfplots} package as done here in Figure~\ref{fig1:plot}.
+Most multi-agent reinforcement learning (MARL) research assumes bidirectional communication, but real-world systems often rely on one-way or unreliable transmissions. This study challenges existing MARL approaches by investigating optimal learning strategies under such constraints.
 
-\begin{figure}[h]
-  \centering
-  \begin{tikzpicture}
-    % ideally the results.txt file should be automatically generated by your implementation.
-    \pgfplotstableread{results.txt}\datatable
-    \begin{axis}
-      \addplot+[error bars/.cd, y dir=both, y explicit, error bar style={color=black}] table[x=day, y=explosions, y error=explosionsSD] from \datatable;
-      \addplot+[error bars/.cd, y dir=both, y explicit, error bar style={color=black}] table[x=day, y=fires, y error=firesSD] from \datatable;
-      \legend{explosions, fires};
-    \end{axis}
-  \end{tikzpicture}
-  \caption{Figures should also have a caption.}\label{fig1:plot}
-\end{figure}
+\section{Baseline Environment \& Algorithms}
 
-\subsection{Interpretation of findings}
+\subsection{Baseline Environment} 
+\paragraph{Fully Communicative MARL Model} Both R1 and R2 can exchange full-bidirectional messages. It can be used as a benchmark to compare against the one-way communication constraint.
 
-Summarise your results.
-Are the results what you expected?
-Which results are surprising?
-How do you interpret them?
+\paragraph{No Communication Model} R2 relies only on local detection which completely ignores messages from R1.
 
-\section{Conclusion}
-\subsection{Discussion}
+\subsection{Baseline Algorithms} 
+\paragraph{Multi-Agent Deep Q-Network (MADQN)} This algorithm uses independent Q-learning for each agent. D-MARL \cite{D-MARL} explores independent Q-learning variants through \textbf{Heterogeneous-Agent Proximal Policy Optimization (HAPPO)} and shared critics.  In our context, R1 learns what signals to send, and R2 learns how to interpret them.
+As suggested by D-MARL \cite{D-MARL}, it is a type of decentralized Q-learning strategy where agents decide their own actions independently.
 
-What do you take away from your project?
-What did you learn?
+\paragraph{Independent PPO (IPPO)} Inspired by the idea of independent agents \cite{D-MARL} learning decentralized policies within minimal communication, we intend to design a mechanism where both robots are trained independently, and at the same time, R2 make decisions based on the signals received from R1.
 
-\subsection{Relevance}
+\section{Proposed Solution Approach}
+\subsection{Learning Algorithms}
 
-Key question 5: What is the relevance of this work?
+Firstly, \textbf{multi-Agent Proximal Policy Optimization (MAPPO)} \cite{NeurIPS2021} allows agents to share experiences while maintaining decentralized decision-making. Then, \textbf{Graph Neural Networks (GNNs)} \cite{lowe2020multiagent} are used for message encoding which helps R2 learn patterns in R1’s signals over time. In addition, a \textbf{Sparse Attention Mechanism} \cite{das2019tarmac} optimizes when R1 should communicate, preventing unnecessary messages.
 
-Which new questions do you have now?
-Do you results suggest future research directions?
+\subsection{Project Backup Plan} 
+If the MARL approach struggles, alternative solutions include:
+\paragraph{Hierarchical Reinforcement Learning (HRL)} R1 acts as a high-level planner, while R2 executes specific actions. This is a joint control-and-communication optimization mechanism where decisions are divided between high-level planners and low-level executors. \cite{deepRL-joint-trajectory-communication-IoT} For example, in autonomous systems (like connected vehicles), hierarchical structures are often implied to differentiate route planning (leader) from control execution (follower).
 
-\subsection{Team Work}
+\paragraph{Self-Supervised Learning for Signal Interpretation} If MARL performs poorly, a supervised loss function can be introduced to refine R2’s decision-making. 
 
-How did you work together as a team?
-Who contributed how to this report and to the implementation?
-What should you have done differently?
+\subsection{Testing \& Performance Comparisons}
+\subsection{Evaluation Metrics} 
+\begin{itemize}
+    \item \textbf{Completion Rate}: Percentage of successful goal-reaching attempts.
+    \item \textbf{Navigation Efficiency}: Steps taken relative to the optimal path.
+    \item \textbf{Tether Constraint Violations}: Number of times the robots exceed the maximum allowed distance.
+    \item \textbf{Collision Rate} Number of times R2 collides with obstacles.
+\end{itemize}
+
+\subsection{Comparative Baselines} 
+\paragraph{No Communication Model} Tests on whether one-way signals improve performance over local sensing alone.
+
+\paragraph{Fully Communicative Model} Measures whether bidirectional communication leads to better results.
+
+\paragraph{Asymmetric Model (Ours)} Evaluates learned policies against both baselines.
+
+\subsection{Validation} 
+If our approach improves task completion, reduces collisions, and enhances efficiency under one-way communication constraints, it proves its practical viability.
+
+\section{Research Roadmap} 
+The leader is responsible for dividing the subtasks, managing time and preparing the report and analysis for the assigned section among the other team members. 
+
+\section*{Research Roadmap Table}
+\begin{tabular}{|c|p{5cm}|p{3cm}|c|}
+    \hline
+    \textbf{Phase} & \textbf{Task} & \textbf{Lead} & \textbf{Time} \\ \hline
+    1 & \textbf{Develop a 2D MARL simulation (using VMAS or PettingZoo)}: \newline Train basic PPO agents for R2’s navigation: & Kelvin & Week 1-2 \\ \hline
+    2 & \textbf{Train MADQN and MAPPO models}: \newline Integrate one-way communication constraints. & Kimia & Week 3-4 \\ \hline
+    3 & \textbf{Evaluate performance against baseline models}: \newline Optimize message encoding and sparse attention mechanisms. & Chintan & Week 5-6 \\ \hline
+\end{tabular}
+
+% Gantt Chart
+\section*{Gantt Chart}
+\begin{ganttchart}[
+    hgrid,
+    vgrid={*1{dotted}},
+    x unit=0.8cm,
+    y unit title=0.7cm,
+    y unit chart=0.8cm,
+    title height=1,
+    bar height=0.6,
+    title/.style={fill=blue!20},
+    bar/.style={fill=green!40},
+    progress label text={},
+    bar label font=\bfseries
+]{1}{6} % Timeline from Week 1 to Week 6
+
+% Titles
+\gantttitle{Project Timeline (Weeks)}{6} \\
+\gantttitle{1}{1} \gantttitle{2}{1} \gantttitle{3}{1} \gantttitle{4}{1} \gantttitle{5}{1} \gantttitle{6}{1} \\
+
+% Phases with names
+\ganttbar[name=phase1]{\textbf{Phase 1: Simulation \& PPO Training (Kelvin)}}{1}{2} \\
+\ganttbar[name=phase2]{\textbf{Phase 2: Train MADQN/MAPPO \& Comm (Kimia)}}{3}{4} \\
+\ganttbar[name=phase3]{\textbf{Phase 3: Evaluation \& Optimization (Chintan)}}{5}{6}
+
+\end{ganttchart}
+
+Please note that upon approval from the professor, there will be an additional member in our group as well. But because he is not a student of the course COMP5801, he is going to mainly assist with the paperwork and to ensure our conference paper to be presentable. 
+
+\section*{Future Work (Beyond 6 Weeks)}
+\begin{itemize}
+    \item \textbf{Scaling to Multi-Agent Navigation \cite{off-beat-MARL}}:  Extending the model to handle convoys of robots following R1.
+    \item \textbf{Simulating Real-World Signal Loss \cite{D-MARL}}: Testing how disruptions in communication affect performance.
+    \item \textbf{Hardware Deployment on Physical Robots}: Transitioning from simulation to real-world implementation.
+\end{itemize}
+
+\section{Implementation consideration}
+\begin{itemize}
+    \item Computationally feasible using NVIDIA 2080/3060 GPUs.
+    \item No real-world sensor data required, fully simulated environment.
+    \item Aligns with Project Stubs B \& C by modifying communication structures.
+    \item Extends MARL research into realistic asymmetric communication scenarios.
+\end{itemize}
 
 % This will print you references, please do not change it.
 \printbibliography
+
+\section*{Appendix: Project Stubs}
+\subsection*{Project A}
+Multiple speakers are aware of their relative position in space. However, the follower/listener does not know this relative positioning and has to learn how to fuse the information from multiple guidance sources in a coherent fashion. Furthermore, the order in which the guidance arrives is not indicative of spatial relationship between the speakers. In fact, the order of these messages is scrambled.
+\\
+Goal: Create an algorithm that will allow the speakers and the listener to learn how facilitate the listener's task through communication. Demonstrate that either speaker's identity or spacial position is coded in their learned message.
+
+\subsection*{Project B}
+Multiple speakers are aware of their relative position in space. The follower/listener does recognise their relative position in space as well, and has to fuse the information from multiple guidance sources in a coherent fashion. Furthermore, the order in which the guidance arrives is fixed and is clearly perceived as coming from a specific speaker. However, random communication failures sometimes block the original message from a speaker (usually one, but not always the same one). The non-blocked speakers can identify this occurence and contribute to the signal-channel of the blocked speaker. The non-blocked speakers make the decision to contribute independently of each other, i.e., there's not central decision maker to decide who and what will contribute. All contributes are superimposed on each other.
+\\
+Goal: Create an algorithm that will allow the speakers and the listener to learn how facilitate the listener's task through communication. Demonstrate that the speakers' contribution strategies to the blocked-spaker signal-channel are correlated. 
+
+\subsection*{Project C}
+Multiple speakers are aware of their relative position in space. The follower/listener does recognise their relative position in space as well, and has to fuse the information from multiple guidance sources in a coherent fashion. Furthermore, the --order-- in which the guidance arrives is fixed, but does not contain speaker id a priori. Random communication failures sometimes block the original message from one or more speakers. Thus, the number of messages that arrive can vary. 
+\\
+Goal: Create an algorithm that will allow the speakers and the listener to learn how facilitate the listener's task through communication. Demonstrate how the communication strategy and performance depend (if at all) on the probability of communication failure. 
+
+\subsection*{Project D}
+Consider a MARL that uses full parameter sharing (swarm-like behaviour), but no communication, and is capable of solving at least one of the following scenarios of VMAS:
+\begin{itemize}
+    \item balance
+    \item wheel
+\end{itemize}
+
+Now, modify the scenario so that at random intervals one random agent (not necessarily the same) loses control for 'k' steps -- a freeze event. More specifically, while the "frozen" agent continues to receive its usual perceptions and makes an action decision, the chosen action is not implemented. Instead, a default "zero-accelleration" action takes affect.
+\\
+Goal: What will be the performance of the solution algorithm under these conditions as a function of the "freeze" probability? Can you modify the algorithm to recover the performance? You can expand the sensory input of the agent to include information about other agents, but this information should be anonymous and non-ordered. 
+
+\subsection*{Project E}
+Consider a MARL that uses full parameter sharing (swarm-like behaviour), but no communication, and is capable of solving at least one of the following scenarios of VMAS:
+\begin{itemize}
+    \item balance
+    \item wheel
+\end{itemize}
+
+Now, modify the scenario so that at random intervals one random agent (not necessarily the same) loses perception for 'k' steps -- a "blind" event. More specifically, while the "blinded" agent's chosen actions continue to be implemented as usual, the observations it receives are supplanted by a neutral "all-zeros" signal or "white noise".
+\\
+Goal: What will be the performance of the solution algorithm under these conditions as a function of the "blind" probability? Can you modify the algorithm to recover the performance? You can expand the (non-blinded) sensory input of the agent to include information about other agents, but this information should be anonymous and non-ordered. 
 
 \end{document}
