--- a/proposal doc/report.tex
+++ b/proposal doc/report.tex
@@ -11,9 +11,7 @@
   \\
   Kimia Ramezani (Student ID: 101050878)
   \\
-  Chintan Shah (Student ID: )
-  \\
-  Fourth Author (s456789)
+  Chintan Shah (Student ID: 101321493)
   \\
   Supervised by: Dr. Zinovi Rabinovich (Email: \url{Zinovi.Rabinovich@carleton.ca})
 }
@@ -24,7 +22,9 @@
 \maketitle
 
 \begin{abstract}
-Supervised by Dr. Zinovi Rabinovich, this is a project under the course COMP5801 Multi Agent Aspects of Deep Reinforcement Learning (RL), at Carleton University. This group intends to implement a RL-based algorithm for autonomous vehicles.
+Multi-Agent Reinforcement Learning (MARL) has traditionally focused on environments with bidirectional communication, yet real-world applications often face one-way or unreliable transmissions. This study explores asymmetric communication strategies in MARL, specifically for tethered robots operating in a partially observable 2D grid world. The system consists of a Leader (R1) with full map awareness and a Follower (R2) that relies solely on local sensing and R1’s directional signals. A key challenge is ensuring effective coordination despite limited feedback and differing perception capabilities.
+
+To address this, we propose a Multi-Agent PPO (MAPPO) framework combined with Graph Neural Networks (GNNs) for message encoding and a Sparse Attention Mechanism to optimize communication. Our approach is tested against two baseline models: a fully communicative MARL model and a no-communication model, using metrics such as completion rate, navigation efficiency, tether constraint violations, and collision rate.
 \end{abstract}
 
 \section{Project Description}
@@ -134,33 +134,43 @@ The leader is responsible for dividing the subtasks, managing time and preparing
 \end{tabular}
 
 % Gantt Chart
-\section*{Gantt Chart}
 \begin{ganttchart}[
     hgrid,
     vgrid={*1{dotted}},
-    x unit=0.8cm,
-    y unit title=0.7cm,
     y unit chart=0.8cm,
     title height=1,
     bar height=0.6,
-    title/.style={fill=blue!20},
-    bar/.style={fill=green!40},
-    progress label text={},
-    bar label font=\bfseries
-]{1}{6} % Timeline from Week 1 to Week 6
+    group/.style={fill=blue!30},
+    bar/.style={fill=blue},
+    milestone/.style={fill=red},
+    progress label text={}
+]{1}{10} % Weeks from 1 to 10
 
-% Titles
-\gantttitle{Project Timeline (Weeks)}{6} \\
-\gantttitle{1}{1} \gantttitle{2}{1} \gantttitle{3}{1} \gantttitle{4}{1} \gantttitle{5}{1} \gantttitle{6}{1} \\
+  % Title for the chart
+  \gantttitle{Project Timeline (Weeks)}{10} \\
+  \gantttitlelist{1,...,10}{1} \\
 
-% Phases with names
-\ganttbar[name=phase1]{\textbf{Phase 1: Simulation \& PPO Training (Kelvin)}}{1}{2} \\
-\ganttbar[name=phase2]{\textbf{Phase 2: Train MADQN/MAPPO \& Comm (Kimia)}}{3}{4} \\
-\ganttbar[name=phase3]{\textbf{Phase 3: Evaluation \& Optimization (Chintan)}}{5}{6}
+  % Phase 1: Simulation & PPO Training
+  \ganttgroup{Phase 1: Simulation \& PPO Training (Kelvin)}{1}{3} \\
+  \ganttbar{Main Development (Kelvin)}{1}{3} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Reporting and Documenting (Chintan)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Preparation for Phase 2 (Kimia)}{2}{3} \\
+
+  % Phase 2: MADQN/MAPPO Training
+  \ganttgroup{Phase 2: MADQN/MAPPO Training \& Integration (Kimia)}{4}{6} \\
+  \ganttbar{Main Development (Kimia)}{4}{6} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Reporting and Documenting (Kelvin)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Integration Testing for Outcomes from Phase 1 (Kelvin)}{6}{7} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Preparation for Phase 3 (Chintan)}{5}{6} \\
+
+  % Phase 3: Evaluation and Optimization
+  \ganttgroup{Phase 3: Evaluation \& Optimization (Chintan)}{7}{9} \\
+  \ganttbar{Main Development (Chintan)}{7}{9} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Reporting and Documenting (Kimia)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Integration Testing for Outcomes from Phase 2 (Kimia)}{6}{7} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Iteratively Testing Final Outcomes (Everyone)}{9}{10} \\
 
 \end{ganttchart}
-
-Please note that upon approval from the professor, there will be an additional member in our group as well. But because he is not a student of the course COMP5801, he is going to mainly assist with the paperwork and to ensure our conference paper to be presentable. 
 
 \section*{Future Work (Beyond 6 Weeks)}
 \begin{itemize}
