Proposal - Updated formatting on Research Roadmap table

--- a/proposal doc/report.tex
+++ b/proposal doc/report.tex
@@ -125,6 +125,7 @@ If our approach improves task completion, reduces collisions, and enhances effic
 The leader is responsible for dividing the subtasks, managing time and preparing the report and analysis for the assigned section among the other team members. 
 
 \section*{Research Roadmap Table}
+\vspace{-3mm}
 \begin{tabular}{|c|p{5cm}|p{3cm}|c|}
     \hline
     \textbf{Phase} & \textbf{Task} & \textbf{Lead} & \textbf{Time} \\ \hline
