--- a/proposal doc/report.tex
+++ b/proposal doc/report.tex
@@ -154,22 +154,22 @@ The leader is responsible for dividing the subtasks, managing time and preparing
   % Phase 1: Simulation & PPO Training
   \ganttgroup{Phase 1: Simulation \& PPO Training (Kelvin)}{1}{3} \\
   \ganttbar{Main Development (Kelvin)}{1}{3} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Reporting and Documenting (Chintan)}{2}{3} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Preparation for Phase 2 (Kimia)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Chintan)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Preparation for Phase 2 (Kimia)}{2}{3} \\
 
   % Phase 2: MADQN/MAPPO Training
   \ganttgroup{Phase 2: MADQN/MAPPO Training \& Integration (Kimia)}{4}{6} \\
   \ganttbar{Main Development (Kimia)}{4}{6} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Reporting and Documenting (Kelvin)}{2}{3} \\
-  \ganttbar[bar/.append style={fill=green!70}]{Integration Testing for Outcomes from Phase 1 (Kelvin)}{6}{7} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Preparation for Phase 3 (Chintan)}{5}{6} \\
+  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Kelvin)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Integration Testing for Outcomes from Phase 1 (Kelvin)}{6}{7} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Preparation for Phase 3 (Chintan)}{5}{6} \\
 
   % Phase 3: Evaluation and Optimization
   \ganttgroup{Phase 3: Evaluation \& Optimization (Chintan)}{7}{9} \\
   \ganttbar{Main Development (Chintan)}{7}{9} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Reporting and Documenting (Kimia)}{2}{3} \\
-  \ganttbar[bar/.append style={fill=green!70}]{Integration Testing for Outcomes from Phase 2 (Kimia)}{6}{7} \\
-  \ganttbar[bar/.append style={fill=green!70}]{Iteratively Testing Final Outcomes (Everyone)}{9}{10} \\
+  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Kimia)}{2}{3} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Integration Testing for Outcomes from Phase 2 (Kimia)}{6}{7} \\
+  \ganttbar[bar/.append style={fill=orange!70}]{Iteratively Testing Final Outcomes (Everyone)}{9}{10} \\
 
 \end{ganttchart}
 
