--- a/proposal doc/report.tex
+++ b/proposal doc/report.tex
@@ -138,6 +138,7 @@ The leader is responsible for dividing the subtasks, managing time and preparing
 \begin{ganttchart}[
     hgrid,
     vgrid={*1{dotted}},
+    x unit=0.7cm,
     y unit chart=0.8cm,
     title height=1,
     bar height=0.6,
@@ -145,31 +146,31 @@ The leader is responsible for dividing the subtasks, managing time and preparing
     bar/.style={fill=blue},
     milestone/.style={fill=red},
     progress label text={}
-]{1}{10} % Weeks from 1 to 10
+]{1}{6} % Weeks from 1 to 6
 
   % Title for the chart
-  \gantttitle{Project Timeline (Weeks)}{10} \\
-  \gantttitlelist{1,...,10}{1} \\
+  \gantttitle{Project Timeline (Weeks)}{6} \\
+  \gantttitlelist{1,...,6}{1} \\
 
   % Phase 1: Simulation & PPO Training
-  \ganttgroup{Phase 1: Simulation \& PPO Training (Kelvin)}{1}{3} \\
-  \ganttbar{Main Development (Kelvin)}{1}{3} \\
-  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Chintan)}{2}{3} \\
-  \ganttbar[bar/.append style={fill=green!70}]{Preparation for Phase 2 (Kimia)}{2}{3} \\
+  \ganttgroup{Phase 1: Simulation \& PPO Training (Kelvin)}{1}{2} \\
+  \ganttbar{Main Development (Kelvin)}{1}{2} \\
+  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Chintan)}{1}{3} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Preparation for Phase 2 (Kimia)}{1}{2} \\
 
   % Phase 2: MADQN/MAPPO Training
-  \ganttgroup{Phase 2: MADQN/MAPPO Training \& Integration (Kimia)}{4}{6} \\
-  \ganttbar{Main Development (Kimia)}{4}{6} \\
-  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Kelvin)}{2}{3} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Integration Testing for Outcomes from Phase 1 (Kelvin)}{6}{7} \\
-  \ganttbar[bar/.append style={fill=green!70}]{Preparation for Phase 3 (Chintan)}{5}{6} \\
+  \ganttgroup{Phase 2: MADQN/MAPPO Training \& Integration (Kimia)}{3}{4} \\
+  \ganttbar{Main Development (Kimia)}{3}{4} \\
+  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Kelvin)}{3}{5} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Integration Testing for Outcomes from Phase 1 (Kelvin)}{4}{5} \\
+  \ganttbar[bar/.append style={fill=green!70}]{Preparation for Phase 3 (Chintan)}{3}{4} \\
 
   % Phase 3: Evaluation and Optimization
-  \ganttgroup{Phase 3: Evaluation \& Optimization (Chintan)}{7}{9} \\
-  \ganttbar{Main Development (Chintan)}{7}{9} \\
-  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Kimia)}{2}{3} \\
-  \ganttbar[bar/.append style={fill=yellow!70}]{Integration Testing for Outcomes from Phase 2 (Kimia)}{6}{7} \\
-  \ganttbar[bar/.append style={fill=orange!70}]{Iteratively Testing Final Outcomes (Everyone)}{9}{10} \\
+  \ganttgroup{Phase 3: Evaluation \& Optimization (Chintan)}{5}{6} \\
+  \ganttbar{Main Development (Chintan)}{5}{6} \\
+  \ganttbar[bar/.append style={fill=pink!70}]{Reporting and Documenting (Kimia)}{4}{6} \\
+  \ganttbar[bar/.append style={fill=yellow!70}]{Integration Testing for Outcomes from Phase 2 (Kimia)}{5}{6} \\
+  \ganttbar[bar/.append style={fill=orange!70}]{Iteratively Testing Final Outcomes (Everyone)}{6}{6} 
 
 \end{ganttchart}
 
