Proposal - Research Roadmap table punctuation

--- a/proposal doc/report.tex
+++ b/proposal doc/report.tex
@@ -129,7 +129,7 @@ The leader is responsible for dividing the subtasks, managing time and preparing
 \begin{tabular}{|c|p{5cm}|p{3cm}|c|}
     \hline
     \textbf{Phase} & \textbf{Task} & \textbf{Lead} & \textbf{Time} \\ \hline
-    1 & \textbf{Develop a 2D MARL simulation (using VMAS or PettingZoo)}: \newline Train basic PPO agents for R2’s navigation: & Kelvin & Week 1-2 \\ \hline
+    1 & \textbf{Develop a 2D MARL simulation (using VMAS or PettingZoo)}: \newline Train basic PPO agents for R2’s navigation. & Kelvin & Week 1-2 \\ \hline
     2 & \textbf{Train MADQN and MAPPO models}: \newline Integrate one-way communication constraints. & Kimia & Week 3-4 \\ \hline
     3 & \textbf{Evaluate performance against baseline models}: \newline Optimize message encoding and sparse attention mechanisms. & Chintan & Week 5-6 \\ \hline
 \end{tabular}
